--- a/vistas/Productos.html
+++ b/vistas/Productos.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel =" hoja de estilo "
+    integridad =" sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3 " origen cruzado =" anónimo ">
+
+
     <title>Maria Medina Platería</title>
     <link rel="stylesheet" href="../style.css/main.css">
 </head>
@@ -28,12 +33,49 @@
 
         <!-- <p>links para desafio 1 navegabilidad entre 5 html</p> -->
 
-        <ul>
-            <li><a href="./Nosotros.html">Nosotros</a></li>
-            <li><a href="./Productos.html">Productos</a></li>
-            <li><a href="./Galeria.html">Galeria</a></li>
-            <li><a href="./Contacto.html">Contacto</a></li>
-        </ul>
+        <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../vistas/Nosotros.html">Nosotros</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="../vistas/Productos.html" id="navbarDropdown" role="button" data-bs-toggle="Productos" aria-expanded="false">
+                      Productos
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="../vistas/Galeria.html">Galeria</a>
+                  </li>
+
+                  <li class="nav-item">
+                    <a class="nav-link" href="../vistas/Contacto.html">Contacto</a>
+                  </li>
+
+
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+
 
     </header>
 <br>
@@ -120,6 +162,11 @@
         <div class="copi">
             Copigrith todos los derechos reservados
         </div>
+
+        <script  src =" https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js "
+        integridad =" sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p "
+        crossorigin =" anónimo " > </script>
+
     </body>
     
     </html>
