--- a/vistas/Nosotros.html
+++ b/vistas/Nosotros.html
@@ -68,10 +68,6 @@
 
 
                 </ul>
-                <form class="d-flex" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
               </div>
             </div>
           </nav>
@@ -88,22 +84,19 @@
 
     <main class="main"> 
         <!-- Nosotros -->
-        <h1>Nosotros</h1>
-        <div id="Nosotros">
-            <div>
-                <img src="../img/mano-con-anillo.jpg" alt="foto de joyeria"
-                    style="max-width: 200px">
+        <h2>Nosotros</h2>
+        <div class="Nosotros">
+          <div class="conteiner">
+            <div class="row">
+              <div class="item col-6">
+                <img class="img-fluid" src="../img/mano-con-anillo.jpg" alt="foto de joyeria" style="max-width: 200px">
             </div>
-            <div>
-
-
-                <!-- <p>En mi trabajo final las cinco secciones del sitio van a estar en la misma pagina web, por esta
-                    razon los wiframe de movile y dextop fueron disenados de esa manera
-                    De todas formas para cumplir con el desafio, genere otros html para poder implementar lo
-                    solicitado por la consigna de enlazar archivos html </p> -->
-
-                <p>Somos una joyeria de la ciudad de Mar Del Plata con mas de 15 años de experiencia. Ofrecemos Compra y venta minorista de Oro y Plateria fina, con cuentas personales. 
-                    Contamos con la experiencia suficiente para ofrecer a los clientes una vasta gama de productos originales de altísima calidad. Nuestros años de experiencia nos permiten brindarle soluciones creativas con el mejor diseño y a un costo óptimo
+            <div class="col-6">
+              <p class="text-center"> Somos una joyeria de la ciudad de Mar Del Plata con mas de 15 años de experiencia. Ofrecemos Compra y
+                venta minorista de Oro y Plateria fina, con cuentas personales.
+                Contamos con la experiencia suficiente para ofrecer a los clientes una vasta gama de productos
+                originales de altísima calidad. Nuestros años de experiencia nos permiten brindarle soluciones creativas
+                con el mejor diseño y a un costo óptimo.
                 </p>
             </div>
         </div>
