--- a/index.html
+++ b/index.html
@@ -100,129 +100,184 @@
         </div>
       </div>
 
+      <!-- NOSOTROS -->
+      <div class="container-fluid py-4 nosotros">
 
-      <main>
-        <!-- NOSOTROS -->
-        <div class="container-fluid py-4 nosotros">
+        <div class="row align-items-center mb-4">
+          <h1>Nosotros</h1>
+          <h3>"Maria Medina Plateria"</h3>
+          <p>Somos una empresa<strong>familiar</strong> de la ciudad de Mar Del Plata (provincia de Buenos Aires) con
+            mas de 15 años de experiencia. Ofrecemos Compra y venta minorista de Oro y Plateria fina, con cuentas
+            personales.
+            Contamos con la experiencia suficiente para ofrecer a los clientes una vasta gama de productos
+            originales de altísima calidad. Nuestros años de experiencia nos permiten brindarle soluciones creativas
+            con el mejor diseño y a un costo óptimo. Trabajamos día a día para superarnos y dar lo mejor de nosotros a
+            nuestros clientes</p>
+        </div>
 
-          <div class="row align-items-center mb-4">
-            <h1>Nosotros</h1>
-            <h3>"Maria Medina Plateria"</h3>
-            <p>Somos una empresa<strong>familiar</strong> de la ciudad de Mar Del Plata (provincia de Buenos Aires) con
-              mas de 15 años de experiencia. Ofrecemos Compra y venta minorista de Oro y Plateria fina, con cuentas
-              personales.
-              Contamos con la experiencia suficiente para ofrecer a los clientes una vasta gama de productos
-              originales de altísima calidad. Nuestros años de experiencia nos permiten brindarle soluciones creativas
-              con el mejor diseño y a un costo óptimo. Trabajamos día a día para superarnos y dar lo mejor de nosotros a
-              nuestros clientes</p>
-          </div>
-
-          <div class="row align-items-center mb-4">
-            <img class="col-12 col-md-6 mb-4" src="./img/anillos-dos solos.jpg" alt="Mano con anillo" />
-            <div class="col-12 col-md-6">
-              <h2>Quince años de trayectoria juntos</h2>
-              <p>La <strong>responsabilidad, capacitación y el compromiso diario</strong> fueron las
-                características
-                que nos permitieron crecer y consolidarnos</p>
-              <p> Más de 15 años de trayectoria y experiencia aseguran calidad. Nuestro objetivo es trabajar con ahínco
-                para acercarte las mejores productos, junto con las tendencias del mercado y ofrecerte todo el
-                asesoramiento y apoyo necesario para hacer realidad tu sueño. </p>
-            </div>
-          </div>
-
-          <div class="row align-items-center">
-            <div class="col-12 col-md-6">
-              <h2>Historia</h2>
-              <p>Paso a paso, sin atajos, con la planificación de nuestras actividades a lo largo de nuestra vida, Maria
-                Medina Plateria, luego de 15 años ha ido adquiriendo el “Oficio de Joyero”, del que ahora podemos
-                legítimamente estar orgullosos. Lo importante, para nosotros, no es el lujo sino la “calidad”, por lo
-                cual pacientemente buscamos el crecimiento.</p>
-            </div>
-            <img class="col-12 col-md-6" src="./img/cuatro anillos.jpg" alt="cuatro anillos de plata" />
+        <div class="row align-items-center mb-4">
+          <img class="col-12 col-md-6 mb-4" src="./img/anillos-dos solos.jpg" alt="Mano con anillo" />
+          <div class="col-12 col-md-6">
+            <h2>Quince años de trayectoria juntos</h2>
+            <p>La <strong>responsabilidad, capacitación y el compromiso diario</strong> fueron las
+              características
+              que nos permitieron crecer y consolidarnos</p>
+            <p> Más de 15 años de trayectoria y experiencia aseguran calidad. Nuestro objetivo es trabajar con ahínco
+              para acercarte las mejores productos, junto con las tendencias del mercado y ofrecerte todo el
+              asesoramiento y apoyo necesario para hacer realidad tu sueño. </p>
           </div>
         </div>
-        <!-- PRODUCTOS -->
-        <div class="container-fluid py-4">
-          <h1>Productos</h1>
-          <div class="row mb-4">
-            <div class="col-12 col-md-6">
-              <h2>Anillos</h2>
-              <p>Anillos de Plata Lisa, Plata inflada, plata y piedra, subic y plata rose.</p>
-            </div>
-            <p>ACA DEBERIA PONER IMAGENES CON INFORMACION Y CARACETRISTICA ABAJO DE LOS PRODUCTOS QUE HAY, ANILLOS,
-              CADENAS, PULSERA, AROS. Deberia sacarlo de boostrap</p>
-            <img class="col-12 col-md-6" src="./img/anillos-dos solos.jpg" alt="cuatro anillos de plata" />
+
+        <div class="row align-items-center">
+          <div class="col-12 col-md-6">
+            <h2>Historia</h2>
+            <p>Paso a paso, sin atajos, con la planificación de nuestras actividades a lo largo de nuestra vida, Maria
+              Medina Plateria, luego de 15 años ha ido adquiriendo el “Oficio de Joyero”, del que ahora podemos
+              legítimamente estar orgullosos. Lo importante, para nosotros, no es el lujo sino la “calidad”, por lo
+              cual pacientemente buscamos el crecimiento.</p>
           </div>
-        </div>
-        <img class="col-12 col-md-6" src="./img/1.jpg" alt="cuatro anillos de plata" />
-    </div>
-    <!-- GALERIA DE FOTOS  -->
-    <div class="container-fluid py-4">
-      <h1>Galería de imágenes</h1>
-      <h2>Plata</h2>
-      <div class="row g-4 mb-4">
-        <div class="col-sm-6 col-lg-3">
-          <img src="./img/1.jpg" class="img-fluid" alt="Plateria">
-        </div>
-        <div class="col-sm-6 col-lg-3">
-          <img src="./img/2.jpg" class="img-fluid" alt="Plateria">
-        </div>
-        <div class="col-sm-6 col-lg-3">
-          <img src="./img/3.jpg" class="img-fluid" alt="Plateria">
-        </div>
-        <div class="col-sm-6 col-lg-3">
-          <img src="./img/4.jpg" class="img-fluid" alt="Plateria">
+          <img class="col-12 col-md-6" src="./img/cuatro anillos.jpg" alt="cuatro anillos de plata" />
         </div>
       </div>
-      <div class="row g-4">
-        <div class="col-sm-6 col-lg-3">
-          <img src="./img/5.jpg" class="img-fluid" alt="Plateria">
-        </div>
-        <div class="col-sm-6 col-lg-3">
-          <img src="./img/6.jpg" class="img-fluid" alt="Plateria">
-        </div>
-        <div class="col-sm-6 col-lg-3">
-          <img src="./img/Aros.jpg" class="img-fluid" alt="Plateria">
-        </div>
-        <div class="col-sm-6 col-lg-3">
-          <img src="./img/Ars.jpg" class="img-fluid" alt="Plateria">
-        </div>
-      </div>
-    </div>
+      <!-- PRODUCTOS -->
+      <div class="container-fluid py-4">
+        <h1>Productos</h1>
+        <div class="row mb-4">
+          <div class="col-12 col-md-6">
+            <h2>Anillos</h2>
+            <div class="card" style="width: 18rem;">
+              <img src="../img/10.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <div class="card-body">
+                <h5 class="Anillos Plata 925">Anillos de Plata Circular y Cuadrado</h5>
+                <p class="card-text">Anillos Plata lisa 925.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
 
-    <!-- CONTACTO -->
+            <div class="card" style="width: 18rem;">
+              <img src="../img/11.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <div class="card-body">
+                <h5 class="Pulseras diferentes dijes de Plata">Pulseras diferentes dijes de Plata</h5>
+                <p class="card-text">Pulseras diferentes dijes de Plata 925</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
 
-    <div class="container-fluid py-4">
-      <h1>Contacto</h1>
-      <div class="row">
-        <div class="col-12 col-md-6">
-          <form action="mailto:mariamedina143@hotmail.com">
-            <legend>Dejanos tu consulta. Nos comunicaremos a la brevedad.</legend>
+            <div class="card" style="width: 18rem;">
+              <img src="../img/12.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <div class="card-body">
+                <h5 class="Cadena plata 925 con dijes">Cadena plata 925 con dijes</h5>
+                <p class="card-text">Cadena plata 925 con dijes diferentes motivos</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
 
-            <label for="name">Nombre:</label>
-            <input type="text" id="name" name="name" placeholder="Ingrese su nombre" required>
+            <div class="card" style="width: 18rem;">
+              <img src="../img/13.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <div class="card-body">
+                <h5 class="Pulseras plata 925">Pulseras plata 925</h5>
+                <p class="card-text">Pulseras plata 925 con diferentes dijes</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
 
-            <label for="tel">Teléfono:</label>
-            <input type="tel" id="tel" name="tel" placeholder="Ingrese su teléfono" required>
+            <div class="card" style="width: 18rem;">
+              <img src="../img/14.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <div class="card-body">
+                <h5 class="Anillos plata 925 con piedras">Anillos plata 925 con piedras</h5>
+                <p class="card-text">Anillos plata 925 con piedras de Nacar</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
 
-            <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required placeholder="Ingrese su e-mail">
 
-            <label for="consulta">Dejanos tu consulta:</label>
-            <textarea id="consulta" name="consulta" rows="4" cols="50"></textarea>
+            <div class="card" style="width: 18rem;">
+              <img src="../img/15.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <div class="card-body">
+                <h5 class="Aros Circulo Plata 925">Aros Circulo Plata 925</h5>
+                <p class="card-text">Aros Circulo con pelotitas Plata 925.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
 
-            <button type="submit">Enviar</button>
-          </form>
-        </div>
-      </div>
-    </div>
+            <div class="card" style="width: 18rem;">
+              <img src="../img/16.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <div class="card-body">
+                <h5 class="Pulsera Plata 925">Pulsera Plata 925</h5>
+                <p class="card-text">Pulsera Plata inflada 925</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+              </div>
+            </div>
+
+
+            <!-- GALERIA DE FOTOS  -->
+            <div class="container-fluid py-4">
+              <h1>Galería de imágenes</h1>
+              <h2>Plata</h2>
+              <div class="row g-4 mb-4">
+                <div class="col-sm-6 col-lg-3">
+                  <img src="./img/1.jpg" class="img-fluid" alt="Plateria">
+                </div>
+                <div class="col-sm-6 col-lg-3">
+                  <img src="./img/2.jpg" class="img-fluid" alt="Plateria">
+                </div>
+                <div class="col-sm-6 col-lg-3">
+                  <img src="./img/3.jpg" class="img-fluid" alt="Plateria">
+                </div>
+                <div class="col-sm-6 col-lg-3">
+                  <img src="./img/4.jpg" class="img-fluid" alt="Plateria">
+                </div>
+              </div>
+              <div class="row g-4">
+                <div class="col-sm-6 col-lg-3">
+                  <img src="./img/5.jpg" class="img-fluid" alt="Plateria">
+                </div>
+                <div class="col-sm-6 col-lg-3">
+                  <img src="./img/6.jpg" class="img-fluid" alt="Plateria">
+                </div>
+                <div class="col-sm-6 col-lg-3">
+                  <img src="./img/Aros.jpg" class="img-fluid" alt="Plateria">
+                </div>
+                <div class="col-sm-6 col-lg-3">
+                  <img src="./img/Ars.jpg" class="img-fluid" alt="Plateria">
+                </div>
+              </div>
+            </div>
+
+            <!-- CONTACTO -->
+
+            <div class="container-fluid py-4">
+              <h1>Contacto</h1>
+              <div class="row">
+                <div class="col-12 col-md-6">
+                  <form action="mailto:mariamedina143@hotmail.com">
+                    <legend>Dejanos tu consulta. Nos comunicaremos a la brevedad.</legend>
+
+                    <label for="name">Nombre:</label>
+                    <input type="text" id="name" name="name" placeholder="Ingrese su nombre" required>
+
+                    <label for="tel">Teléfono:</label>
+                    <input type="tel" id="tel" name="tel" placeholder="Ingrese su teléfono" required>
+
+                    <label for="email">E-mail:</label>
+                    <input type="email" id="email" name="email" required placeholder="Ingrese su e-mail">
+
+                    <label for="consulta">Dejanos tu consulta:</label>
+                    <textarea id="consulta" name="consulta" rows="4" cols="50"></textarea>
+
+                    <button type="submit">Enviar</button>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
   </main>
   <!-- FOOTER -->
   <footer class="container-fluid pt-4">
     <div class="row">
       <div class="col-md-2 logo d-none d-md-block">
         <a href="./index.html" title="Maria Medina Plateria">
-          <img src="./img/logo maria medina 2.jpg" alt="Maria Medina Logo" width="200px"/>
+          <img src="./img/logo maria medina 2.jpg" alt="Maria Medina Logo" width="200px" />
         </a>
       </div>
       <div class="col-12 col-md-3 links">
@@ -243,7 +298,7 @@
             </a>
           </li>
           <li>
-              <p>Mar Del Plata (7600), Buenos Aires, Arg.</p>
+            <p>Mar Del Plata (7600), Buenos Aires, Arg.</p>
           </li>
         </ul>
       </div>
@@ -278,4 +333,5 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
