--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           <div class="col-12 col-md-6">
             <h2>Anillos</h2>
             <div class="card" style="width: 18rem;">
-              <img src="../img/10.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <img src="./img/10.jpg" class="card-img-top" alt="Imagen plateria fina">
               <div class="card-body">
                 <h5 class="Anillos Plata 925">Anillos de Plata Circular y Cuadrado</h5>
                 <p class="card-text">Anillos Plata lisa 925.</p>
@@ -155,7 +155,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-              <img src="../img/11.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <img src="./img/11.jpg" class="card-img-top" alt="Imagen plateria fina">
               <div class="card-body">
                 <h5 class="Pulseras diferentes dijes de Plata">Pulseras diferentes dijes de Plata</h5>
                 <p class="card-text">Pulseras diferentes dijes de Plata 925</p>
@@ -164,7 +164,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-              <img src="../img/12.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <img src="./img/12.jpg" class="card-img-top" alt="Imagen plateria fina">
               <div class="card-body">
                 <h5 class="Cadena plata 925 con dijes">Cadena plata 925 con dijes</h5>
                 <p class="card-text">Cadena plata 925 con dijes diferentes motivos</p>
@@ -173,7 +173,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-              <img src="../img/13.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <img src="./img/13.jpg" class="card-img-top" alt="Imagen plateria fina">
               <div class="card-body">
                 <h5 class="Pulseras plata 925">Pulseras plata 925</h5>
                 <p class="card-text">Pulseras plata 925 con diferentes dijes</p>
@@ -182,7 +182,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-              <img src="../img/14.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <img src="./img/14.jpg" class="card-img-top" alt="Imagen plateria fina">
               <div class="card-body">
                 <h5 class="Anillos plata 925 con piedras">Anillos plata 925 con piedras</h5>
                 <p class="card-text">Anillos plata 925 con piedras de Nacar</p>
@@ -192,7 +192,7 @@
 
 
             <div class="card" style="width: 18rem;">
-              <img src="../img/15.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <img src="./img/15.jpg" class="card-img-top" alt="Imagen plateria fina">
               <div class="card-body">
                 <h5 class="Aros Circulo Plata 925">Aros Circulo Plata 925</h5>
                 <p class="card-text">Aros Circulo con pelotitas Plata 925.</p>
@@ -201,7 +201,7 @@
             </div>
 
             <div class="card" style="width: 18rem;">
-              <img src="../img/16.jpg" class="card-img-top" alt="Imagen plateria fina">
+              <img src="./img/16.jpg" class="card-img-top" alt="Imagen plateria fina">
               <div class="card-body">
                 <h5 class="Pulsera Plata 925">Pulsera Plata 925</h5>
                 <p class="card-text">Pulsera Plata inflada 925</p>
