--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
     <div id="main-carousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="w-100 d-none d-md-block" src="./img/anillo piedra bordo.jpg" alt="Anillos" />
-          <img class="w-100 d-block d-md-none" src="./img/anillos-dos solos.jpg" alt="Anillos" />
+          <img class="w-100 d-none d-md-block" src="./img/10.jpg" alt="Anillos" />
+          <img class="w-100 d-block d-md-none" src="./img/100.jpg" alt="Anillos" />
         </div>
         <div class="carousel-item">
-          <img class="w-100 d-none d-md-block" src="./img/Anillos.jpg" alt="Anillos" />
+          <img class="w-100 d-none d-md-block" src="./img/Anicopia.jpg" alt="Anillos" />
           <img class="w-100 d-block d-md-none" src="./img/Aros.jpg" alt="Aros" />
         </div>
       </div>
@@ -150,7 +150,6 @@
               <div class="card-body">
                 <h5 class="Anillos Plata 925">Anillos de Plata Circular y Cuadrado</h5>
                 <p class="card-text">Anillos Plata lisa 925.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
 
@@ -159,7 +158,6 @@
               <div class="card-body">
                 <h5 class="Pulseras diferentes dijes de Plata">Pulseras diferentes dijes de Plata</h5>
                 <p class="card-text">Pulseras diferentes dijes de Plata 925</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
 
@@ -168,7 +166,6 @@
               <div class="card-body">
                 <h5 class="Cadena plata 925 con dijes">Cadena plata 925 con dijes</h5>
                 <p class="card-text">Cadena plata 925 con dijes diferentes motivos</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
 
@@ -177,7 +174,6 @@
               <div class="card-body">
                 <h5 class="Pulseras plata 925">Pulseras plata 925</h5>
                 <p class="card-text">Pulseras plata 925 con diferentes dijes</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
 
@@ -186,7 +182,6 @@
               <div class="card-body">
                 <h5 class="Anillos plata 925 con piedras">Anillos plata 925 con piedras</h5>
                 <p class="card-text">Anillos plata 925 con piedras de Nacar</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
 
@@ -196,7 +191,6 @@
               <div class="card-body">
                 <h5 class="Aros Circulo Plata 925">Aros Circulo Plata 925</h5>
                 <p class="card-text">Aros Circulo con pelotitas Plata 925.</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
 
@@ -205,7 +199,6 @@
               <div class="card-body">
                 <h5 class="Pulsera Plata 925">Pulsera Plata 925</h5>
                 <p class="card-text">Pulsera Plata inflada 925</p>
-                <a href="#" class="btn btn-primary">Go somewhere</a>
               </div>
             </div>
 
